--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
+.nav-image {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-image: url(./images/Most-Common-Video-Game-Design-Questions.jpg);
+  background-position: left;
+  width: 100%;
+  height: 160px;
+  
+}
+.login-form {
+  justify-content: center;
+  min-height: 100px;
+  background-color: cornsilk;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  text-align: center;
+  background-image: url(./images/27f9e10ac93d65cd611a04fe41d56bc5.jpg);
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  min-height: 100vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h3 {
+  color: crimson;
+  text-transform: uppercase;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+h4 {
+  color: crimson;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+h2 {
+  color: crimson;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
