--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 }
 
 h1 {
-  color: crimson;
+  color: #32b33a;
   text-transform: uppercase;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
     1px 1px 0 #000;
